--- a/package.json
+++ b/package.json
@@ -2,17 +2,23 @@
   "name": "blackboard",
   "version": "0.1.0",
   "private": true,
+  "resolutions": {
+    "glob-parent": "^6.0.0",
+    "browserslist": "^4.16.6",
+    "trim-newlines": "^4.0.1",
+    "css-what": "^5.0.1"
+  },
   "dependencies": {
     "@babel/runtime": "^7.10.4",
-    "autoprefixer": "^9.8.5",
+    "autoprefixer": "^10.2.6",
     "case-sensitive-paths-webpack-plugin": "^2.3.0",
     "chalk": "^4.1.0",
-    "css-loader": "^3.6.0",
+    "css-loader": "^5.2.6",
     "dotenv": "^8.2.0",
     "dotenv-expand": "^5.1.0",
     "fs-extra": "^9.0.1",
     "konva": "^8.0.2",
-    "postcss-flexbugs-fixes": "^4.2.1",
+    "postcss-flexbugs-fixes": "^5.0.2",
     "promise": "8.0.1",
     "prop-types": "^15.7.2",
     "raf": "3.4.1",
@@ -23,6 +29,7 @@
     "whatwg-fetch": "3.2.0"
   },
   "scripts": {
+    "preinstall": "npx npm-force-resolutions",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
@@ -95,6 +102,8 @@
     "babel-jest": "^26.1.0",
     "babel-loader": "^8.1.0",
     "babel-preset-react-app": "^9.1.2",
+    "browserslist": "^4.16.6",
+    "css-what": "^5.0.1",
     "eslint": "^7.4.0",
     "eslint-config-react-app": "^5.2.1",
     "eslint-loader": "^4.0.2",
@@ -104,16 +113,18 @@
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.7",
     "file-loader": "^6.0.0",
+    "glob-parent": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "jest": "^26.1.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
-    "npm-watch": "^0.6.0",
-    "postcss-loader": "^3.0.0",
-    "react-dev-utils": "^10.2.1",
+    "npm-watch": "^0.9.0",
+    "postcss-loader": "^5.3.0",
+    "react-dev-utils": "^11.0.4",
     "sass-loader": "^10.0.3",
     "style-loader": "^1.2.1",
     "sw-precache-webpack-plugin": "^1.0.0",
+    "trim-newlines": "^4.0.1",
     "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
